<resources>
    <string name="app_name">GroceryGenius</string>
    <string name="title_activity_main">Your GroceryGenius</string>

    <!-- General Use & arrays -->
    <string name="frequency_shop_visit_prompt">How often do you go...</string>
    <string-array name="frequency_shop_visit">
        <item>Several times every day</item>
        <item>Every day</item>
        <item>A few times every week</item>
        <item>Once a week</item>
        <item>A few times every month</item>
        <item>Every month</item>
        <item>Very infrequently</item>
    </string-array>

    <string-array name="numerical_order">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
    </string-array>

    <string name="positive_button_create">Create</string>
    <string name="positive_button_add_item">Add Item</string>
    <string name="positive_button_rename">Rename</string>

    <!-- List -->
    <string name="settings_new_list">Add New List</string>
    <string name="hint_add_list">What is the name of your List?</string>

    <!-- Shopping list strings-->
    <string name="shopping_list_frag_title">SHOPPING</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">The Pantry is very empty...</string>

    <string name="rename_shop">New Shop Name: </string>
    <string name="rename_section">New Section Name: </string>
    <string name="hint_add_item">What do you need? (e.g. Milk)</string>
    <string name="quantity">How many do you want?</string>

    <!-- Add shop Dialog -->
    <string name="action_new_shop">Add New Shop</string>
    <string name="hint_add_shop">Create a shop (e.g. Aldi)</string>

    <!-- Add shelf Dialog -->
    <string name="action_new_shelf">Add New Shelf</string>
    <string name="hint_add_shelf">Create a shelf (e.g. Fridge)</string>
    <string name="dialog_add_shelf_order_instructions">Where in the order of your shelves is this?</string>

    <!-- Add section Dialog -->
    <string name="hint_add_section">Create a section in the shop (e.g. Dairy, Produce)</string>
    <string name="section_order">Where in the order of sections you visit in the shop is this?</string>

    <!-- Pantry -->
    <string name="pantry_frag_title">PANTRY</string>
    <string name="expiry_check">Does this item expire?</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Frequencies of Shop Visits -->

    <string name="question1">What shop(s) will you visit?</string>
    <string name="aldi">Aldi</string>
    <string name="lidl">Lidl</string>
    <string name="tesco">Tesco</string>
    <string name="other">Other</string>
    <string name="enter_number">Enter a number</string>
    <string name="action_new_list">Create new list</string>

    <string name="title_activity_quiz1">QuizActivity</string>
    <string name="title_activity_quiz_2">Quiz2Activity</string>
    <string name="title_activity_quiz3">Quiz3Activity</string>
    <string name="next">Next</string>
    <string name="add_new_shop">Add new shop</string>
    <string name="enter_shop_name">Enter shop name to add</string>
    <string name="prompt_enter_email">Enter email</string>
    <string name="prompt_enter_password">Enter password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_create_account">Create account</string>
    <string name="question_add_sections1">Add the sections of the shop</string>
    <string name="question_add_section2">you will visit</string>
    <string name="hint_enter_shop_section">Enter shop section</string>
    <string name="button_add_section">Add section</string>



    <string name="title_activity_quiz">QuizActivity</string>
    <string name="hint_enter_your_email">Enter your email</string>
    <string name="hint_enter_your_password">Enter your password</string>
    <string name="hint_confirm_password">Confirm Your Password</string>
    <string name="title_activity_quiz12">Quiz1Activity2</string>

    <!-- Shop Menu -->
    <string name="options">Options</string>

    <string name="option_visit_more_often">Visit This Shop More Often</string>
    <string name="option_visit_less_often">Visit This Shop Less Often</string>
    <string name="option_delete_shop">Remove this Shop</string>
    <string name="option_rename_shop">Change Shop Name</string>

    <!-- Section Menu -->
    <string name="option_visit_earlier">I visit this section earlier.</string>
    <string name="option_visit_later">I visit this section later.</string>
    <string name="option_delete_section">Remove this Section</string>
    <string name="option_rename_section">Change Section Name</string>

    <!-- Shelf Menu -->
    <string name="option_delete_shelf">Remove this Shelf</string>
    <string name="option_rename_shelf">Change Shelf Name</string>
    <string name="prompt_new_username">Enter new username</string>
    <string name="hint_username">Username</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Settings -->
    <string name="settings_delete_item_header">Delete Items</string>
    <string name="settings_delete_item_explanation">When you purchase items, if you would simply like them removed from your shopping list, and not added to your pantry click here!</string>

    <string name="settings_move_item_header">Move Items to Pantry</string>
    <string name="settings_move_item_explanation">When you purchase items, if you would like to select a pantry shelf, set an expiry date, then have the item moved to your pantry, click here!</string>

    <string name="positive_button_move_to_pantry">Buy</string>
    <string name="title_activity_list">ListActivity</string>

    <string name="action_share_list">Share List</string>
    <string name="action_logout">Logout</string>
    <string name="hint_share_list">Enter the email of the user you wish to share this list with.</string>
    <string name="button_add_shop">Add Shop</string>
</resources>
