<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.team5.grocerygeniusmockup.UI.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/settings_new_shop"
        android:orderInCategory="1"
        android:title="@string/action_new_shop"
        app:showAsAction="never" />
    <item android:id="@+id/settings_new_shelf"
        android:orderInCategory="2"
        android:title="@string/action_new_shelf"
        app:showAsAction="never" />
    <item android:id="@+id/settings_share_list"
        android:orderInCategory="3"
        android:title="@string/action_share_list"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:orderInCategory="2"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
