<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:text="@string/question_add_sections1"
        android:inputType="text"
        android:background="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:gravity="center"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:text="@string/question_add_section2"
        android:inputType="text"
        android:background="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:gravity="center"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterShopName"
        android:hint="@string/hint_enter_shop_section"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/button_add_section"
        android:id="@+id/button_add_new_shop"
        android:layout_margin="10dip" />


    <ListView android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:layout_weight="0.87" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/next"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>