<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">



    <TextView android:id="@+id/header_enter_sections"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:textStyle="normal"
        android:textSize="22dp"
        android:textColor="#FFFFFF"
        android:padding="10dp"
        android:text="@string/enter_shop_name"
        android:background="#5db02d"
        android:textAlignment="center" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prompt_section"
        android:layout_below="@id/header_enter_sections"
        android:hint="@string/hint_add_shop"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_shop"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:id="@+id/submit_section"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/button_quiz2activity_next"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp" />

</LinearLayout>